# iot-devkit

MXChip/AZ3166/app/: alert_manager.c  alert_manager.h  display_manager.c  display_manager.h  main.c  sensor_monitor.c  sensor_monitor.h
STMicroelectronics/NUCLEO-F429ZI/: CMakeLists.txt  CMakePresets.json
STMicroelectronics/NUCLEO-F429ZI/app/: CMakeLists.txt  board_init.c  board_init.h  console.c  main.c
STMicroelectronics/NUCLEO-F429ZI/app/startup/: NUCLEO_F429ZI.ld  startup_stm32f429xx.s  system_stm32f4xx.c  tx_initialize_low_level.S
STMicroelectronics/NUCLEO-F429ZI/app/stm32cubef4/: stm32f4xx_hal_msp.c
STMicroelectronics/NUCLEO-F429ZI/cmake/: FindCMSIS.cmake  FindSTM32HAL.cmake
STMicroelectronics/NUCLEO-F429ZI/lib/: CMakeLists.txt
STMicroelectronics/NUCLEO-F429ZI/lib/netxduo/: nx_user.h
STMicroelectronics/NUCLEO-F429ZI/lib/stm32cubef4/: CMakeLists.txt
STMicroelectronics/NUCLEO-F429ZI/lib/stm32cubef4/config/: stm32f4xx_hal_conf.h
STMicroelectronics/NUCLEO-F429ZI/lib/threadx/: tx_user.h
STMicroelectronics/NUCLEO-F429ZI/scripts/: build.bat  build.sh
